// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar WorkflowListNavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar"
  >
    <div
      className="navbar-brand d-flex flex-row align-items-center"
    >
      <img
        className="logo"
        src="/static/images/logo.svg"
      />
      <h1
        className="mb-0 mr-auto logo-1"
      >
        <a
          href="/workflows"
        >
          Workbench
        </a>
      </h1>
    </div>
    <div
      className="d-flex flex-row align-items-center"
    >
      <a
        className="t-white content-2 mr-5"
        href="http://cjworkbench.org/index.php/blog/"
      >
        Learn
      </a>
      <WfHamburgerMenu />
    </div>
  </nav>
</div>
`;

exports[`NavBar WorkflowNavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar-WF"
  >
    <div
      className="navbar-brand d-flex flex-row align-items-center"
    >
      <div
        className="title-metadata-stack"
      >
        <EditableWorkflowName
          api={Object {}}
        />
        <WorkflowMetadata
          api={Object {}}
          user={Object {}}
          workflow={Object {}}
        />
      </div>
    </div>
    <div
      className="d-flex flex-row align-items-center"
    >
      <a
        className="navLink t-white content-2"
        href="http://cjworkbench.org/index.php/blog/"
      >
        Learn
      </a>
      <WfHamburgerMenu
        api={Object {}}
        isReadOnly={false}
        user={Object {}}
      />
    </div>
  </nav>
</div>
`;
